<resources>
    <string name="app_name">COVID-19 CT</string>
    <string name="nav_bar_open" translatable="false"></string>
    <string name="nav_bar_close" translatable="false"></string>
    <string name="title_activity_maps">Map</string>
    <string name="Change_language">Change Language</string>
    <string name="welcome_key">Welcome</string>
    <string name="email_key">Enter your e-mail</string>
    <string name="pass_key">Enter your password</string>
    <string name="forgot_pass_key">Forgot password?</string>
    <string name="login_button_key">Login</string>
    <string name="reg_key">Register</string>
    <string name="reg_welcome">Enter your details</string>
    <string name="reg_conf_pass">Confirm your password</string>
    <string name="my_info">My Info</string>
    <string name="change_pass">Change password</string>
    <string name="done_key">Done</string>
    <string name="logout_key">Log Out</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Search for a friend!</string>
    <string name="loc_error">Unable to get current Location</string>
    <string name="map_complete">Map Complete!</string>
    <string name="change_status">Change Status</string>
    <string name="friend_name">Name</string>
    <string name="friend_number">Number</string>
    <string name="new_friend">Add Friend</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="emergency">Emergency</string>
    <string name="mild_stauts">Mild Status</string>
    <string name="weaksymptoms">Weak Symptoms</string>
    <string name="strongsymptoms">Strong Symptoms</string>
    <string name="extremesymptoms">Extreme Condition</string>
    <string name="apply_key">Apply</string>
    <string name="language_settings">Language settings</string>
    <string name="Tracking">Tracking:</string>
    <string name="RTData">Real-Time Data</string>
    <string name="icemsg">Change your ICE message</string>
    <string name="deletefriends">Delete your friends</string>
    <string name="savemsg">Save your ICE message</string>
    <string name="dont_match">The password fields do not match</string>
    <string name="sick_status">Severely sick</string>
    <string name="Interactdash">Interactions</string>
    <string name="interactppl">The number of people you have interacted with:</string>
    <string name="CoronaPositive">COVID-19 Positive</string>
    <string name="symptoms">COVID-19 Symptomous</string>
    <string name="covidpos">You are COVID-19 positive</string>
    <string name="covidsympt">You have shown COVID-19 symptoms</string>
    <string name="encounterpositive">Someone you encountered has tested positve for COVID-19</string>
    <string name="encountersymptoms">Someone you encountered has shown symptoms for COVID-19</string>
    <string name="confirmedcount">Of those, confirmed COVID-19 cases:</string>
    <string name="unconfirmedcount">and unconfirmed COVID-19 cases:</string>
</resources>
