<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/change_language"
            android:icon="@drawable/ic_language"
            android:title="@string/Change_language"
            app:showAsAction="always" />
        <item
            android:id="@+id/my_info"
            android:title="@string/my_info"
            android:icon="@drawable/ic_baseline_face_24"
            app:showAsAction="never" />
        <item
            android:id="@+id/placeholder1"
            android:title="placeholder1"
            app:showAsAction="never" />
        <item
            android:id="@+id/maps_location"
            android:title="@string/title_activity_maps"
            android:icon="@drawable/ic_outline_map_24"
            app:showAsAction="never"
            />


    </group>
</menu>