<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:background="@drawable/rounded"
    android:padding="10dp"
    android:layout_gravity="center"
    >
    <Button
        android:id="@+id/status_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:background="@drawable/ic_outline_close_24"
        />

    <Button
        android:id="@+id/mild_status"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/mild_stauts"
        android:textColor="#FFF"
        android:textSize="18dp" />
    <Button
        android:id="@+id/weaksymptoms_status"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/weaksymptoms"
        android:textColor="#FFF"
        android:textSize="18dp" />
    <Button
        android:id="@+id/strongsymptoms_status"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/strongsymptoms"
        android:textColor="#FFF"
        android:textSize="18dp" />
    <Button
        android:id="@+id/extreme_status"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/extremesymptoms"
        android:textColor="#FFF"
        android:textSize="18dp" />


    
</LinearLayout>