<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    tools:context=".loginactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <ImageView

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/virus"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_welcome"
            android:textColor="#E0BB00"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/regemailusername"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_key"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:textColorHint="#E0BB00"
            android:drawablePadding="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/outline"
            android:padding="20dp"
            />

        <EditText
            android:id="@+id/regpassword"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_key"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:textColorHint="#E0BB00"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/outline"
            android:padding="20dp"
            />

        <EditText
            android:id="@+id/regpassword2"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/reg_conf_pass"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:textColorHint="#E0BB00"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/outline"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/reg_key"
            android:layout_marginTop="20dp"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:background="@drawable/button"

            />

    </LinearLayout>



</LinearLayout>