<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".InteractionsDashboard">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Interactdash"
        android:textSize="16pt"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#E0BB00"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interactppl"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="7pt"
        android:layout_marginBottom="15dp"

        />

    <TextView
        android:id="@+id/interactint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_gravity="center"
        android:textSize="10pt"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/gohome"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center|bottom"
        android:text="@string/done_key"
        android:layout_marginTop="300dp"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:background="@drawable/button"

        />

</LinearLayout>