<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E0BB00"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/friends"
        app:titleMarginStart="160dp"
        android:elevation="4dp"
        />
    <!--Hint borde vara blank, för ska hämta akutell information-->

    <!--<EditText
        android:id="@+id/add_friend"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/add_friend"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:textColorHint="#E0BB00"
        android:drawablePadding="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/outline"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        />
    -->

        <!-- If you have trouble designing further on this layout, comment over ListView -->

        <ListView
            android:id="@+id/friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        -->
    <Button
        android:id="@+id/done_go_back"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/done_key"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:background="@drawable/button"
        />
        <Button
            android:id="@+id/emergency"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/emergency"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:background="@drawable/button"
            />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="25dp"
            app:fabSize="normal"
            android:src="@drawable/ic_baseline_add_24"

            />
    </FrameLayout>

    </LinearLayout>

</RelativeLayout>